# UK_weather_MCP

./: .gitignore  LICENSE  Makefile  README.md  UK_Met_Office_Site_Specific_Forecast_MCP.py  pyproject.toml  stations.json  uk_mcp_server.py  us_mcp_server.py
.github/workflows/: claude.yml
