[project]
name = "weatherforecast-mcp"
version = "0.1.0"
description = "A MCP server for UK weather forecasts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.12.2",
]

[tool.mcp.plugins]
UK_weather = "UK_Met_Office_Site_Specific_Forecast_MCP:mcp"
